--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
+		"node-fs": "^0.1.7",
 		"sk-clib": "^0.0.8",
 		"super": "file:",
 		"tailwind-merge": "^3.2.0"
